<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/fact1_text"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLink1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fact1_link"
            android:textColor="#05403B"
            android:textSize="16sp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_marginBottom="16dp" />

        <!-- Факт 2 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fact2_text"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tvLink2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fact2_link"
            android:textColor="#05403B"
            android:textSize="16sp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_marginBottom="16dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fact3_text"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tvLink3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fact3_link"
            android:textColor="#05403B"
            android:textSize="16sp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fact4_text"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tvLink4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fact4_link"
            android:textColor="#05403B"
            android:textSize="16sp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_marginBottom="16dp" />




        <Button
            android:id="@+id/btnBackToMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Back to Main Menu"
            android:fontFamily="@font/roboto_bold"
            android:backgroundTint="#4D0B7A"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="24dp" />
    </LinearLayout>
</ScrollView>
